Add responsive viewport meta tag
Signed-off-by: Alejandro García Montoro <alejandro.garciamontoro@gmail.com>

--- a/custom_index.html
+++ b/custom_index.html
@@ -2,7 +2,8 @@
  <html>
  <head>
    <meta charset="UTF-8">
-   <title>Main</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Pengarna</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
    <script src="elm.js"></script>
