Move dist files to own directory

--- a/custom_index.html
+++ b/custom_index.html
@@ -1,14 +1,18 @@
- <!DOCTYPE HTML>
+ <!DOCTYPE html>
  <html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Pengarna</title>
+
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+   <link rel="stylesheet" href="/fontawesome-free-5.13.0-web/css/all.css" >
+
    <script src="elm.js"></script>
  </head>
  <body>
-   <script>var app = Elm.Main.init();</script>
+   <script>
+   var app = Elm.Main.init();
+   </script>
  </body>
  </html>
