--- a/custom_index.html
+++ b/custom_index.html
@@ -1,18 +1,27 @@
  <!DOCTYPE html>
  <html>
+
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Pengarna</title>
 
+   <!-- Bulma CSS file -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-   <link rel="stylesheet" href="/fontawesome-free-5.13.0-web/css/all.css" >
 
-   <script src="elm.js"></script>
+   <!-- Font awesome CSS files -->
+   <link rel="stylesheet" href="/assets/fa/css/fontawesome.min.css" >
+   <link rel="stylesheet" href="/assets/fa/css/brands.min.css" >
+   <link rel="stylesheet" href="/assets/fa/css/solid.min.css" >
+
+   <!-- Elm entry file -->
+   <script src="assets/js/elm.js"></script>
  </head>
+
  <body>
    <script>
-   var app = Elm.Main.init();
+     var app = Elm.Main.init();
    </script>
  </body>
+
  </html>
