Add text inside circle

--- a/custom_index.html
+++ b/custom_index.html
@@ -14,6 +14,9 @@
    <link rel="stylesheet" href="/assets/fa/css/brands.min.css" >
    <link rel="stylesheet" href="/assets/fa/css/solid.min.css" >
 
+   <!-- Custom CSS -->
+   <link rel="stylesheet" href="/assets/css/main.css" >
+
    <!-- Elm entry file -->
    <script src="assets/js/elm.js"></script>
  </head>
